[gd_scene load_steps=7 format=3 uid="uid://gm10vkh7heev"]

[ext_resource type="Script" path="res://planeta_script.gd" id="1_t2q26"]
[ext_resource type="Texture2D" uid="uid://cprc785u43w2g" path="res://Planeta_Urano.png" id="2_v0es0"]
[ext_resource type="Texture2D" uid="uid://ukjqxfmf7mga" path="res://Planeta_Urano_M.png" id="3_x0hhe"]
[ext_resource type="Texture2D" uid="uid://bn0nlqh8anoyl" path="res://X (errado).png" id="4_i8c7n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fd3et"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v0es0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_x0hhe")
}],
"loop": true,
"name": &"marcado",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6dbtb"]
radius = 114.0

[node name="Planeta_Urano" type="RigidBody2D"]
position = Vector2(85, 90)
collision_layer = 4
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_t2q26")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_fd3et")

[node name="Sprite2D" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_i8c7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6dbtb")
metadata/_edit_group_ = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -115.0
offset_top = -115.0
offset_right = 116.0
offset_bottom = 117.0

[connection signal="selected" from="." to="." method="_on_selected"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
